chore: add mobile repsonsivity to the site

--- a/css/index.css
+++ b/css/index.css
@@ -152,9 +152,15 @@ img{
 
 .contact{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-around;
     align-items: center;
+}
+.info{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
     min-height: 100vh;
 }
 .contactLigne{
@@ -208,11 +214,11 @@ footer{
     }
     
     /* Styles pour la carte (notreCarte) */
-    .notreCarte {
+    .plat {
         flex-direction: column;
         text-align: center;
     }
-    .notreCarte img{
+    .plat img{
         max-width: 70%;
     }
     
@@ -230,13 +236,13 @@ footer{
     }
 
     /* Styles pour la section "Nous Contacter" (contact) */
-    .contact {
+    .info {
         flex-direction: column;
         justify-content: center;
         align-items: center;
     }
 
-    .contact div iframe{
+    .info div iframe{
         width: 300px;
         height: 300px;
     }
@@ -248,7 +254,7 @@ footer{
         font-size: 0.8rem;
     }
     /* Styles pour la carte (notreCarte) */
-    .notreCarte {
+    .plat {
         flex-direction: column;
         text-align: center;
     }
@@ -261,7 +267,7 @@ footer{
         flex-direction: column;
         align-items: center;
         max-width: 70%;
-        height: 60vh;
+        max-height: 60vh;
         padding-bottom: 1rem;
     }
     .carte {
@@ -270,13 +276,13 @@ footer{
     }
 
     /* Styles pour la section "Nous Contacter" (contact) */
-    .contact {
+    .info {
         flex-direction: column;
-        justify-content: center;
+        justify-content: space-between;
         align-items: center;
     }
 
-    .contact div iframe {
+    .info div iframe {
         width: 300px;
         height: 300px;
     }
