--- a/css/index.css
+++ b/css/index.css
@@ -215,6 +215,13 @@ footer{
         justify-content: space-between;
         align-items: center;
     }
+    .find{
+        padding: 2rem 10rem;
+        margin-left: 3rem;
+    }
+    .title2-adjusted {
+        margin-left: 8rem; /* Ajustez cette valeur selon vos besoins */
+    }
     
     /* Styles pour la carte (notreCarte) */
     .plat {
